--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -164,8 +164,6 @@ confint(M_genX)
 #Giving odds ratios with confidence intervals in a table 
 
 exp(cbind(OR = coef(M_genY), confint(M_genY)))
-exp(cbind(OR = coef(M_boomer), confint(M_boomer)))
-
 ```
 
 Code for stargazer table comparing odds-ratios of coefficients across models. 
@@ -191,6 +189,10 @@ library(MASS)
 library(dplyr)
 library(Zelig)
 
+#Steps. 1) run model but using Zelig, which is able to use survey weights
+#2) use "setx" function to set the values for the simulation
+#3) run the simulation using the parameters you specified (sim)
+#4) plot using ci.plot
 Z_genY <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, model = "logit.survey", weights=~weights, data = anes_genY)
 setZ_genY <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, female = 1, 
                   vote_2008 = 0)
@@ -203,7 +205,7 @@ setZ_boomer <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3
 simZ_boomer <- sim(Z_boomer, x = setZ_boomer)
 ci.plot(simZ_boomer)
 
-
+?ci.plot
 ```
 
 Now playing with and plotting predicted probabilities based on the model
@@ -319,7 +321,6 @@ ggplot(blackfem_ed_genY, aes(x = factor(1:5), y = probability, group = 1)) +
 #why our confidence bands are so huge. makes things look really imprecise. 
 
 ```
-
 
 Assessing the model fit. I draw on the UCLA page here for this: 
 http://www.ats.ucla.edu/stat/r/dae/logit.htm 
