--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -193,19 +193,22 @@ library(Zelig)
 #2) use "setx" function to set the values for the simulation
 #3) run the simulation using the parameters you specified (sim)
 #4) plot using ci.plot
+
+#this is black millennial female at various levels of education and moderate income
 Z_genY <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, model = "logit.survey", weights=~weights, data = anes_genY)
 setZ_genY <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, female = 1, 
                   vote_2008 = 0)
 simZ_genY <- sim(Z_genY, x = setZ_genY)
 ci.plot(simZ_genY)
 
+#same thing but a black baby boomer
 Z_boomer <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, model = "logit.survey", weights=~weights, data = anes_boomer)
 setZ_boomer <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, female = 1, 
                   vote_2008 = 0)
 simZ_boomer <- sim(Z_boomer, x = setZ_boomer)
 ci.plot(simZ_boomer)
 
-?ci.plot
+
 ```
 
 Now playing with and plotting predicted probabilities based on the model
