--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -214,10 +214,34 @@ ci.plot(simZ_genY)
 
 #same thing but a black baby boomer
 Z_boomer <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, model = "logit.survey", weights=~weights, data = anes_boomer)
+
+summary(Z_boomer)
+
 setZ_boomer <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, female = 1, 
                   vote_2008 = 0)
+
 simZ_boomer <- sim(Z_boomer, x = setZ_boomer)
+
+#Looking at results 
+summary(simZ_boomer)
+
+#Potential plots
+
+plot(simZ_boomer)
+
 ci.plot(simZ_boomer)
+
+
+#example roc 
+rocplot(z.out1$y, z.out2$y, fitted(z.out1), fitted(z.out2))
+
+#attempt at roc, not sure on second logit 
+
+rocplot(Z_boomer$y, )
+
+#Looking at results 
+summary(simZ_boomer)
+
 
 ```
 
