--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -205,37 +205,58 @@ library(Zelig)
 #4) plot using ci.plot
 
 #this is black millennial female at various levels of education and moderate income
+
 Z_genY <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, model = "logit.survey", weights=~weights, strata=~strata, data = anes_genY)
 setZ_genY_black <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, 
                         female = 1, vote_2008 = 0)
 simZ_genY_black <- sim(Z_genY, x = setZ_genY_black)
 ci.plot(simZ_genY_black, ylim = 0:1, ylab = "Probability of voting", 
         main = "Black Millennial Woman")
-#ci.plot(simZ_genY_black, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:5, tick = TRUE, labels = c("Below HS", "HS", "Some post-HS", "B", "Masters")))
 
+#With labels 
+ci.plot(simZ_genY_black, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:5, tick = TRUE, labels = c("Below HS", "HS", "Some post-HS", "B", "Masters", )
+
+                                                                         
 #same thing but a black baby boomer
+
 Z_boomer <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, model = "logit.survey", weights=~weights, strata=~strata, data = anes_boomer)
-setZ_boomer_black <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, 
-                          female = 1, vote_2008 = 0)
-simZ_boomer_black <- sim(Z_boomer, x = setZ_boomer)
+setZ_boomer_black <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, female = 1, vote_2008 = 0)
+simZ_boomer_black <- sim(Z_boomer, x = setZ_boomer_black)
 ci.plot(simZ_boomer_black, ylim = 0:1, ylab = "Probability of voting", 
         main = "Black Baby Boomer Woman")
+
+#With Labels 
+ci.plot(simZ_boomer_black, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:5, tick = TRUE, 
+        labels = c("Below HS", "HS", "Some post-HS", "Bacholer", "Masters", )
+
 #CONCLUSION: plots look really damn similar, which may be expected given that 
-#the coefficients for Boomers and Millennials do show striking similarities, with 
-#the exception of race stuff. So the fact that a black person model looks so similar
-#between the two generations is perhaps a bit odd. 
+#the coefficients for Boomers and Millennials do show striking similarities, with #the exception of race stuff. So the fact that a black person model looks so similar #between the two generations is perhaps a bit odd. 
 
 #trying now a white man with a high school diploma across different levels of income
-#first, Millennial
+
+#First, Millennial
+
 setZ_genY_white <- setx(Z_genY, income = 1:7, education = 2, black = 0, hispanic = 0, 
                         female =0, vote_2008 = 0)
+
 simZ_genY_white <- sim(Z_genY, x = setZ_genY_white)
-ci.plot(simZ_genY_white, ylim = 0:1, ylab = "Probability of voting")
+
+ci.plot(simZ_genY_white, ylim = 0:1, ylab = "Probability of voting",
+        main = "White Male Millenial with HS Edu")
+
+#With labels 
+ci.plot(simZ_genY_white, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:7, tick = TRUE, labels = c("20k", "20-40k", "45k-65k", "65k-90k", "90k-125k", "125-250k", "250,000k or more", ) 
+
 #Now, Baby Boomer
 setZ_boomer_white <- setx(Z_boomer, income = 1:7, education = 2, black = 0, hispanic = 0, 
                         female =0, vote_2008 = 0)
 simZ_boomer_white <- sim(Z_boomer, x = setZ_boomer_white)
-ci.plot(simZ_boomer_white, ylim = 0:1, ylab = "Probability of voting")
+ci.plot(simZ_boomer_white, ylim = 0:1, ylab = "Probability of voting",
+        main = "White Male Babyboomer with HS Edu")
+
+#With labels 
+ci.plot(simZ_boomer_white, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:7, tick = TRUE, labels = c("20k", "20-40k", "45k-65k", "65k-90k", "90k-125k", "125-250k", "250,000k or more", ) 
+
 #again, plots between Boomers and Millennials look really damn similar
 
 ```
