--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -211,7 +211,7 @@ setZ_genY_black <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income
                         female = 1, vote_2008 = 0)
 simZ_genY_black <- sim(Z_genY, x = setZ_genY_black)
 ci.plot(simZ_genY_black, ylim = 0:1, ylab = "Probability of voting", 
-        main = "Black Millennial Woman")
+        main = "Black Millennial Woman", legcol = "black", leg = 1,)
 
 #With labels 
 ci.plot(simZ_genY_black, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:5, tick = TRUE, labels = c("Below HS", "HS", "Some post-HS", "B", "Masters", )
@@ -223,7 +223,7 @@ Z_boomer <- zelig(vote_2012 ~ education + female + vote_2008 + black + hispanic 
 setZ_boomer_black <- setx(Z_genY, education = 1:5, black = 1, hispanic = 0, income = 3, female = 1, vote_2008 = 0)
 simZ_boomer_black <- sim(Z_boomer, x = setZ_boomer_black)
 ci.plot(simZ_boomer_black, ylim = 0:1, ylab = "Probability of voting", 
-        main = "Black Baby Boomer Woman")
+        main = "Black Baby Boomer Woman", legcol = "black", leg = 1,)
 
 #With Labels 
 ci.plot(simZ_boomer_black, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:5, tick = TRUE, 
@@ -242,17 +242,17 @@ setZ_genY_white <- setx(Z_genY, income = 1:7, education = 2, black = 0, hispanic
 simZ_genY_white <- sim(Z_genY, x = setZ_genY_white)
 
 ci.plot(simZ_genY_white, ylim = 0:1, ylab = "Probability of voting",
-        main = "White Male Millenial with HS Edu")
+        main = "White Male Millenial with HS Edu", legcol = "black", leg = 1, )
 
 #With labels 
-ci.plot(simZ_genY_white, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:7, tick = TRUE, labels = c("20k", "20-40k", "45k-65k", "65k-90k", "90k-125k", "125-250k", "250,000k or more", ) 
+ci.plot(simZ_genY_white, ylim = 0:1, ylab = "Probability of voting", axis(side = 1, at = 1:7, tick = TRUE, labels = c("20k", "20-40k", "45k-65k", "65k-90k", "90k-125k", "125-250k", "250,000k or more", ) 
 
 #Now, Baby Boomer
 setZ_boomer_white <- setx(Z_boomer, income = 1:7, education = 2, black = 0, hispanic = 0, 
                         female =0, vote_2008 = 0)
 simZ_boomer_white <- sim(Z_boomer, x = setZ_boomer_white)
 ci.plot(simZ_boomer_white, ylim = 0:1, ylab = "Probability of voting",
-        main = "White Male Babyboomer with HS Edu")
+        main = "White Male Babyboomer with HS Edu", legcol = "black", leg = 1, )
 
 #With labels 
 ci.plot(simZ_boomer_white, ylim = 0:1, ylab = "Probability of voting",axis(side = 1, at = 1:7, tick = TRUE, labels = c("20k", "20-40k", "45k-65k", "65k-90k", "90k-125k", "125-250k", "250,000k or more", ) 
